2015-07-13  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* board/board-stm32-primer2.h: Update.
	* entry.c (vector_table): Less or more.

2015-07-13  Niibe Yutaka  <gniibe@fsij.org>

	* board/board-*.h (BOARD_NAME): New.
	(STM32F10X_MD): Define for medium-density devices.
	* example-led/sys.c, sample.ld: Update.
	* example-fsm-55/sys.c, hacker-emblem.ld: Update.
	* example-cdc/sys.c (sys_board): New.
	* example-cdc/sample.ld: Update.

2015-07-08  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 0.06.
	* doc/chopstx.texi (VERSION): 0.06.

2015-07-07  Niibe Yutaka  <gniibe@fsij.org>

	* example-fsm-55/sys.c: Include clk_gpio_init.c.
	* board/board-stm32f0-discovery.h, board/board-fsm-55.h: Update.
	* clk_gpio_init.c (gpio_init): Use VAL_GPIO_LED_*.

2015-06-29  Niibe Yutaka  <gniibe@fsij.org>

	* board/board-cq-starm.h: New for CQ STARM.

	* clk_gpio_init.c (gpio_init): LED is mandatory, but USB enabler
	is optional.
	* board/*.h: Update.

2015-06-22  Niibe Yutaka  <gniibe@fsij.org>

	* clk_gpio_init.c: New, adding ports E/F/G.
	* entry.c: Include clk_gpio.init.c if not HAVE_SYS_H.
	* example-led/sys.c: Include clk_gpio_init.c.
	* example-cdc/sys.c: Ditto.

	* board/board-stm32-primer2.h: New from Kaz Kojima.

2015-04-20  Niibe Yutaka  <gniibe@fsij.org>

	Merge cortex-m0-support branch.

	* VERSION: 0.05.

	* example-led/sys.c (gpio_init): Support MCU_STM32F0.
	(reset): Support __ARM_ARCH_6M__.
	* example-led/sample.ld: Change for Cortex-M0.

	* example-fsm-55/*: New example for FSM-55.

	* entry.c (STM32_PPRE1, STM32_PLLSRC, STM32_FLASHBITS)
	(STM32_PLLCLKIN): Support MCU_STM32F0.
	(struct RCC, RCC_*): Support MCU_STM32F0.
	(struct SYSCFG) [MCU_STM32F0]: New.
	(struct GPIO, GPIO*): Support MCU_STM32F0.
	(clock_init, gpio_init): Support MCU_STM32F0.
	(hard_fault, vectors_in_ram, entry): Support Cortex-M0.

	* chopstx.c (chx_cpu_sched_lock, chx_cpu_sched_unlock)
	(sched, preempt, svc): Support Cortex-M0.

	* board/board-fsm-55.h: New.
	* board/board-stm32f0-discovery.h: New.
