@@ -1,4 +1,5 @@
 #define BOARD_NAME "Maple Mini"
+#define BOARD_ID    0x7a445272
 
 #define FLASH_PAGE_SIZE 1024
 #define STM32F10X_MD		/* Medium-density device */
