@@ -1,4 +1,5 @@
 #define BOARD_NAME "Olimex STM32-H103"
+#define BOARD_ID    0xf92bb594
 
 #define FLASH_PAGE_SIZE 1024
 #define STM32F10X_MD		/* Medium-density device */
